--- a/DIP_Homework1/DIP_Homework1.vcxproj
+++ b/DIP_Homework1/DIP_Homework1.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{136C852A-4F52-4549-A26F-A42FDF43747A}</ProjectGuid>
     <RootNamespace>DIPHomework1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <ProjectName>NYUST_DIP_Homework</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
